// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ResetPasswordForm page after entering values 1`] = `
<DocumentFragment>
  <div
    class="min-height mt-5 pt-5"
  >
    <div
      class="container"
    >
      <div
        class="row h-100 justify-content-center mt-5"
      >
        <div
          class="col-md-6 w-100 align-self-center"
        >
          <h2
            class="text-dark mb-0 text-center mb-4"
          >
            Update Password
          </h2>
          <div
            class="p-5 pb-3 br-15 card"
          >
            <form
              class=""
            >
              <div
                class="form-group"
              >
                <div
                  class="input-group"
                >
                  <input
                    autocomplete="off"
                    class="form-control border-right-0"
                    name="password"
                    placeholder="New Password"
                    type="password"
                    value="Soul@123"
                  />
                  <div
                    class="input-group-append"
                  >
                    <div
                      class="show-button"
                    >
                      <small>
                        Show
                      </small>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="form-group"
              >
                <div
                  class="input-group"
                >
                  <input
                    autocomplete="off"
                    class="form-control border-right-0"
                    name="password"
                    placeholder="Confirm New Password"
                    type="password"
                    value="Soul@123"
                  />
                  <div
                    class="input-group-append"
                  >
                    <div
                      class="show-button"
                    >
                      <small>
                        Show
                      </small>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="text-right"
              >
                <div
                  class="mt-3 form-group"
                >
                  <button
                    class="rounded-pill btn btn-danger"
                    type="button"
                  >
                    Update
                  </button>
                   
                  <a
                    href="/"
                  >
                    <button
                      class="rounded-pill btn btn-light"
                      type="button"
                    >
                      Cancel
                    </button>
                  </a>
                </div>
              </div>
              <div
                class="text-muted"
              >
                <a
                  class="red-link"
                  href="/"
                >
                  Login as a different user
                </a>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ResetPasswordForm page before entering values 1`] = `
<DocumentFragment>
  <div
    class="min-height mt-5 pt-5"
  >
    <div
      class="container"
    >
      <div
        class="row h-100 justify-content-center mt-5"
      >
        <div
          class="col-md-6 w-100 align-self-center"
        >
          <h2
            class="text-dark mb-0 text-center mb-4"
          >
            Update Password
          </h2>
          <div
            class="p-5 pb-3 br-15 card"
          >
            <form
              class=""
            >
              <div
                class="form-group"
              >
                <div
                  class="input-group"
                >
                  <input
                    autocomplete="off"
                    class="form-control border-right-0"
                    name="password"
                    placeholder="New Password"
                    type="password"
                    value=""
                  />
                  <div
                    class="input-group-append"
                  >
                    <div
                      class="show-button"
                    >
                      <small>
                        Show
                      </small>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="form-group"
              >
                <div
                  class="input-group"
                >
                  <input
                    autocomplete="off"
                    class="form-control border-right-0"
                    name="password"
                    placeholder="Confirm New Password"
                    type="password"
                    value=""
                  />
                  <div
                    class="input-group-append"
                  >
                    <div
                      class="show-button"
                    >
                      <small>
                        Show
                      </small>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="text-right"
              >
                <div
                  class="mt-3 form-group"
                >
                  <button
                    class="rounded-pill btn btn-danger"
                    type="button"
                  >
                    Update
                  </button>
                   
                  <a
                    href="/"
                  >
                    <button
                      class="rounded-pill btn btn-light"
                      type="button"
                    >
                      Cancel
                    </button>
                  </a>
                </div>
              </div>
              <div
                class="text-muted"
              >
                <a
                  class="red-link"
                  href="/"
                >
                  Login as a different user
                </a>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
